redid images for font pages

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 <div class="webImgContainer" id="bootstrapPortLink">
                   <div class="circle">
                   <div class="front">
-                    <img width="250" height="250" src="assets/images/bootstrap.png" alt="bootstrapImg">
+                    <img width="250" height="250" src="assets/images/bootstrapSized.png" alt="bootstrapImg">
                   </div>
                   <div class="circle">
                     <div class="back" id="bootstrapBack">
@@ -437,7 +437,7 @@
                 <div class="webImgContainer" id="responsivePortLink">
                   <div class="circle">
                   <div class="front">
-                    <img width="250" height="250" src="assets/images/responsive.png" alt="bootstrapImg">
+                    <img width="250" height="250" src="assets/images/responsiveSized.png" alt="responsiveImg">
                   </div>
                   <div class="circle">
                     <div class="back" id="responsiveBack">
