added click events for games page, all mobile friendly save maybe working on nav button

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                       <br>
                       <br>
                       <p class="text">
-                        Online Game.  <br> Utilized Vanilla Javascript to build a fun unique version of online Hangman.
+                        Online Game.  <br> Utilized Vanilla Javascript to build a fun unique version of online Hangman. Click to Play.
                       </p>
                     </div>
                   </div>
@@ -495,7 +495,7 @@
                         <br>
                         <br>
                         <p class="text">
-                          jQuery game.  Determine the value of each object then hit total using click events.
+                          jQuery game.  Determine the value of each object then hit total using click events. Click to Play.
                         </p>
                       </div>
                     </div>
@@ -514,7 +514,7 @@
                           <br>
                           <br>
                           <p class="text">
-                            jQuery RPG Super Smash Bros Game.  Choose your character, then the order of your opponents carefully!.
+                            jQuery RPG Super Smash Bros Game.  Choose your character, then the order of your opponents carefully!. Click to Play.
                           </p>
                         </div>
                       </div>
@@ -533,7 +533,7 @@
                             <br>
                             <br>
                             <p class="text">
-                              Multi-Category Trivia Game built with jQuery, advanced array methods, and aSync timing functions.
+                              Multi-Category Trivia Game built with jQuery, advanced array methods, and aSync timing functions. Click to Play.
                             </p>
                           </div>
                         </div>
@@ -552,7 +552,7 @@
                               <br>
                               <br>
                               <p class="text">
-                                NETGIFZ: A Netflix style interface for gif browsing.  Utilizes AJax and advanced CSS3, no carousel libraries.
+                                NETGIFZ: A Netflix style interface for gif browsing.  Utilizes AJax and advanced CSS3, no carousel libraries. Click to Browse.
                               </p>
                             </div>
                           </div>
@@ -571,7 +571,7 @@
                                 <br>
                                 <br>
                                 <p class="text">
-                                  Train Scheduling App utilizing Firebase for storage, jQuery, and moment.js.
+                                  Train Scheduling App utilizing Firebase for storage, jQuery, and moment.js. Click to Try.
                                 </p>
                               </div>
                             </div>
