made nav more globally viable

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </div>
           </div>
           <div class="row webRow">
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4">
               <div class="webImgContainer" id="listenHereLink">
                 <div class="circle">
                   <div class="front">
@@ -386,7 +386,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4">
                 <div class="webImgContainer" id="bernarooLink">
                   <div class="circle">
                     <div class="front">
@@ -409,12 +409,12 @@
         </div>
         <div id="schoolProjects">
           <div class="row">
-              <div class="col-12 col-md-3">
+              <div class="col-12">
                   <h1 class="projText">SCHOLASTIC:</h1>
             </div>
           </div>
             <div class="row webRow">
-                <div class="col-12 col-md-3">
+                <div class="col-12 col-md-4">
                     <div class="webImgContainer" id="bootstrapPortLink">
                   <div class="circle">
                   <div class="front">
@@ -433,7 +433,7 @@
                 </div>
                 </div>
               </div>
-              <div class="col-12 col-md-3">
+              <div class="col-12 col-md-4">
                   <div class="webImgContainer" id="responsivePortLink">
                   <div class="circle">
                   <div class="front">
@@ -465,7 +465,7 @@
             </div>
           </div>
           <div class="row webRow">
-            <div class="col-xs-3">
+            <div class="col-12 col-md-4">
               <div class="webImgContainer" id="vanGoghLink">
                 <div class="circle">
                   <div class="front">
@@ -483,7 +483,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xs-3">
+            <div class="col-12 col-md-4">
                 <div class="webImgContainer" id="crystalGameLink">
                   <div class="circle">
                     <div class="front">
@@ -502,7 +502,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xs-3">
+              <div class="col-12 col-md-4">
                   <div class="webImgContainer" id="superSmashLink">
                     <div class="circle">
                       <div class="front">
@@ -521,7 +521,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-12 col-md-4">
                     <div class="webImgContainer" id="boozyTriviaLink">
                       <div class="circle">
                         <div class="front">
@@ -540,7 +540,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-xs-3">
+                  <div class="col-12 col-md-4">
                       <div class="webImgContainer" id="netgifzLink">
                         <div class="circle">
                           <div class="front">
@@ -559,7 +559,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-xs-3">
+                    <div class="col-12 col-md-4">
                         <div class="webImgContainer" id="trainGameLink">
                           <div class="circle">
                             <div class="front">
