this may fix load issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">  
   </head>
 
-  <body>
+  <body style="display:none;">
 
     <div id=navDiv>
       <button id="hamburgerBtn"></button>
