making it look nice

--- a/index.html
+++ b/index.html
@@ -364,12 +364,14 @@
         <div id="nonSchoolProjects">
           <div class="row">
             <div class="col">
-               <h1 class="projText">PROFESSIONAL:</h1>
+               <h1 class="projText">PROFESSIONAL</h1>
             </div>
           </div>
           <div class="row webRow">
             <div class="col-12 col-md-4">
               <div class="webImgContainer" id="listenHereLink">
+                  <h2 class="circleHeading">ListenHere</h2>
+                  <h3 class="circleHeadingTwo">Local Music Solution</h3>
                 <div class="circle">
                   <div class="front">
                     <img width="250" height="250" src="assets/images/ListenHere.png" alt="listenHereImg">
@@ -388,6 +390,8 @@
             </div>
             <div class="col-12 col-md-4">
                 <div class="webImgContainer" id="bernarooLink">
+                    <h2 class="circleHeading">Bernaroo</h2>
+                    <h3 class="circleHeadingTwo">Public Event Site</h3>
                   <div class="circle">
                     <div class="front">
                       <img width="250" height="250" src="assets/images/Bernaroo.png" alt="bernarooImg">
@@ -410,12 +414,14 @@
         <div id="schoolProjects">
           <div class="row">
               <div class="col-12">
-                  <h1 class="projText">SCHOLASTIC:</h1>
+                  <h1 class="projText">SCHOLASTIC</h1>
             </div>
           </div>
             <div class="row webRow">
                 <div class="col-12 col-md-4">
                     <div class="webImgContainer" id="bootstrapPortLink">
+                        <h2 class="circleHeading">Bootstrap Portfolio</h2>
+                        <h3 class="circleHeadingTwo">Built to learn Bootstrap 4.0</h3>
                   <div class="circle">
                   <div class="front">
                     <img width="250" height="250" src="assets/images/bootstrapSized.png" alt="bootstrapImg">
@@ -435,6 +441,8 @@
               </div>
               <div class="col-12 col-md-4">
                   <div class="webImgContainer" id="responsivePortLink">
+                      <h2 class="circleHeading">Media Query Portfolio</h2>
+                      <h3 class="circleHeadingTwo">Built to learn media queries</h3>
                   <div class="circle">
                   <div class="front">
                     <img width="250" height="250" src="assets/images/responsiveSized.png" alt="responsiveImg">
@@ -467,6 +475,8 @@
           <div class="row webRow">
             <div class="col-12 col-md-4">
               <div class="webImgContainer" id="vanGoghLink">
+                <h2 class="circleHeading">Hangman</h2>
+                <h3 class="circleHeadingTwo">Guess the Artist Edition</h3>
                 <div class="circle">
                   <div class="front">
                     <img width="250" height="250" src="assets/images/hangman.png" alt="hangmanImg">
@@ -485,6 +495,8 @@
             </div>
             <div class="col-12 col-md-4">
                 <div class="webImgContainer" id="crystalGameLink">
+                  <h2 class="circleHeading">Strategy Game</h2>
+                <h3 class="circleHeadingTwo">Numerical Strategy Game</h3>
                   <div class="circle">
                     <div class="front">
                       <img width="250" height="250" src="assets/images/crystalGame.png" alt="crystalGameImg">
@@ -504,6 +516,8 @@
               </div>
               <div class="col-12 col-md-4">
                   <div class="webImgContainer" id="superSmashLink">
+                <h2 class="circleHeading">Super Smash Bros.</h2>
+                <h3 class="circleHeadingTwo">That's right, Super Smash.</h3>
                     <div class="circle">
                       <div class="front">
                         <img width="250" height="250" src="assets/images/superSmash.png" alt="superSmashImg">
@@ -523,6 +537,8 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <div class="webImgContainer" id="boozyTriviaLink">
+                        <h2 class="circleHeading">Boozy Trivia</h2>
+                        <h3 class="circleHeadingTwo">Wine, Cocktail, and Beer Trivia</h3>
                       <div class="circle">
                         <div class="front">
                           <img width="250" height="250" src="assets/images/boozyTrivia.png" alt="boozyTriviaImg">
@@ -542,6 +558,8 @@
                   </div>
                   <div class="col-12 col-md-4">
                       <div class="webImgContainer" id="netgifzLink">
+                          <h2 class="circleHeading">Netgifz</h2>
+                          <h3 class="circleHeadingTwo">Netflix style Gif Browsing</h3>
                         <div class="circle">
                           <div class="front">
                             <img width="250" height="250" src="assets/images/netgifz.png" alt="netigfzImg">
@@ -561,6 +579,8 @@
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="webImgContainer" id="trainGameLink">
+                            <h2 class="circleHeading">Train Scheduler</h2>
+                            <h3 class="circleHeadingTwo">Scheduling App</h3>
                           <div class="circle">
                             <div class="front">
                               <img width="250" height="250" src="assets/images/trainGame.png" alt="trainGameImg">
