--- a/index.html
+++ b/index.html
@@ -598,6 +598,27 @@
                           </div>
                         </div>
                       </div>
+                  <div class="col-12 col-md-4">
+                        <div class="webImgContainer" id="liriLink">
+                            <h2 class="circleHeading">Liri</h2>
+                            <h3 class="circleHeadingTwo">A Node.JS Terminal App</h3>
+                          <div class="circle">
+                            <div class="front">
+                              <img width="250" height="250" src="assets/images/liri.png" alt="liriImg">
+                            </div>
+                            <div class="circle">
+                              <div class="back" id="liriBack">
+                                <br>
+                                <br>
+                                <br>
+                                <p class="text">
+                                  Node.JS terminal search app that retrieves movie and music information.  Also interfaces with my twitter. Click to visit in Github.
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
           </div>
         </div>
       </div>
