--- a/index.html
+++ b/index.html
@@ -619,6 +619,27 @@
                           </div>
                         </div>
                       </div>
+                <div class="col-12 col-md-4">
+                        <div class="webImgContainer" id="pokedexLink">
+                            <h2 class="circleHeading">Pokedex</h2>
+                            <h3 class="circleHeadingTwo">A Node.JS Terminal Pokedex</h3>
+                          <div class="circle">
+                            <div class="front">
+                              <img width="250" height="250" src="assets/images/liri.png" alt="pokedexImg">
+                            </div>
+                            <div class="circle">
+                              <div class="back" id="pokedexBack">
+                                <br>
+                                <br>
+                                <br>
+                                <p class="text">
+                                  Node.JS terminal based Pokedex.  Made just for fun. Click to visit in Github.
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
           </div>
         </div>
       </div>
