header padding on web and games page for large nav on xxl screens

--- a/index.html
+++ b/index.html
@@ -364,13 +364,13 @@
         <div id="nonSchoolProjects">
           <div class="row">
             <div class="col">
-               <h1 class="projText">PROFESSIONAL</h1>
+               <h1 class="projText" id="websitesTopText">PROFESSIONAL</h1>
             </div>
           </div>
           <div class="row webRow">
             <div class="col-12 col-md-4">
               <div class="webImgContainer" id="listenHereLink">
-                  <h2 class="circleHeading">ListenHere</h2>
+                  <h2 class="circleHeading">ListenHear</h2>
                   <h3 class="circleHeadingTwo">Local Music Solution</h3>
                 <div class="circle">
                   <div class="front">
@@ -469,7 +469,7 @@
         <div class="gamesImgContainer">
         <div class="row">
             <div class="col">
-               <h1 class="projText">SCHOLASTIC:</h1>
+               <h1 id="gamesTopText" class="projText">SCHOLASTIC:</h1>
             </div>
           </div>
           <div class="row webRow">
