--- a/index.html
+++ b/index.html
@@ -387,7 +387,26 @@
                   </div>
                 </div>
               </div>
-            </div>
+              <div class="col-12 col-md-4">
+                <div class="webImgContainer" id="vcLink">
+                    <h2 class="circleHeading">Vacant Company</h2>
+                    <h3 class="circleHeadingTwo">Artist Page</h3>
+                  <div class="circle">
+                    <div class="front">
+                      <img width="250" height="250" src="assets/images/vacantCompany.png" alt="VCImg">
+                    </div>
+                    <div class="circle">
+                      <div class="back" id="vcBack">
+                        <br>
+                        <br>
+                        <p class="text">
+                          Artist Page.  <br> Used by national touring act Vacant Company as their portfolio while booking etc.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             <div class="col-12 col-md-4">
                 <div class="webImgContainer" id="bernarooLink">
                     <h2 class="circleHeading">Bernaroo</h2>
