--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
                   </div>
                 </div>
               </div>
+              </div>
               <div class="col-12 col-md-4">
                 <div class="webImgContainer" id="vcLink">
                     <h2 class="circleHeading">Vacant Company</h2>
