--- a/index.html
+++ b/index.html
@@ -660,6 +660,27 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-12 col-md-4">
+                        <div class="webImgContainer" id="barInvLink">
+                            <h2 class="circleHeading">Inventory Manager</h2>
+                            <h3 class="circleHeadingTwo">A Node.JS+MySQL App</h3>
+                          <div class="circle">
+                            <div class="front">
+                              <img width="250" height="250" src="assets/images/barInv.png" alt="barInvImg">
+                            </div>
+                            <div class="circle">
+                              <div class="back" id="barInvBack">
+                                <br>
+                                <br>
+                                <br>
+                                <p class="text">
+                                  Node.JS + MySQL CLI Bar Inventory Application.  Click to visit in Github.
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
           </div>
         </div>
       </div>
