editing text on 2 tbs link

--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                       <br>
                       <br>
                       <p class="text">
-                        Full Stack App. <br> Utilizes a front end constructed via HTML templating (Handlebars) and Materialize while implementing Node.js, Express, and MySQL in the back.
+                        Full Stack App. <br> Utilizes Handlebars and Materialize CSS in the front and Node.js, Express, and MySQL in the back.
                       </p>
                     </div>
                   </div>
