added yogi work

--- a/index.html
+++ b/index.html
@@ -497,6 +497,26 @@
           </div>
             <div class="row webRow">
                 <div class="col-12 col-md-4">
+                    <div class="webImgContainer" id="yogiRachLink">
+                        <h2 class="circleHeading">The Well Yogi</h2>
+                        <h3 class="circleHeadingTwo">Business Page</h3>
+                      <div class="circle">
+                        <div class="front">
+                          <img width="250" height="250" src="assets/images/wellYogi.png" alt="wellYogiImg">
+                        </div>
+                        <div class="circle">
+                          <div class="back" id="yogiRachBack">
+                            <br>
+                            <br>
+                            <p class="text">
+                              Business Page.  <br> Assisted with mobilization of site.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="col-12 col-md-4">
                     <div class="webImgContainer" id="vcLink">
                         <h2 class="circleHeading">Vacant Company</h2>
                         <h3 class="circleHeadingTwo">Artist Page</h3>
