--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                       <br>
                       <br>
                       <p class="text">
-                        Full Stack App. <br> Utilizes Handlebars and Materialize CSS in the front and Node.js, Express, and MySQL in the back.
+                        Full Stack App. <br> Utilizes Node.js, Passport.js (auth), Express, MySQL, Handlebars and Materialize CSS.
                       </p>
                     </div>
                   </div>
