--- a/index.html
+++ b/index.html
@@ -447,13 +447,33 @@
             </div>
           </div>
           <div class="row webRow">
+              <div class="col-12 col-md-4">
+                <div class="webImgContainer" id="homeStedLink">
+                    <h2 class="circleHeading">HomeStead</h2>
+                    <h3 class="circleHeadingTwo">Web Based SaaS</h3>
+                  <div class="circle">
+                    <div class="front">
+                      <img width="250" height="250" src="assets/images/homeStead.png" alt="homeSteadImg">
+                    </div>
+                    <div class="circle">
+                      <div class="back" id="homeSteadBack">
+                        <br>
+                        <br>
+                        <p class="text">
+                          Community org web app for HOAs and Planned Communities.<br> Node, Express, Handlebars, Sequelize, Sass, Various NPMs.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             <div class="col-12 col-md-4">
               <div class="webImgContainer" id="listenHereLink">
                   <h2 class="circleHeading">ListenHear</h2>
                   <h3 class="circleHeadingTwo">Local Music Solution</h3>
                 <div class="circle">
                   <div class="front">
-                    <img width="250" height="250" src="assets/images/ListenHere.png" alt="listenHereImg">
+                    <img width="250" height="250" src="assets/images/ListenHer.png" alt="listenHearImg">
                   </div>
                   <div class="circle">
                     <div class="back" id="listenHereBack">
@@ -497,6 +517,27 @@
           </div>
             <div class="row webRow">
                 <div class="col-12 col-md-4">
+                    <div class="webImgContainer" id="bernarooLink">
+                        <h2 class="circleHeading">Bernaroo</h2>
+                        <h3 class="circleHeadingTwo">Public Event Site</h3>
+                      <div class="circle">
+                        <div class="front">
+                          <img width="250" height="250" src="assets/images/Bernaroo.png" alt="bernarooImg">
+                        </div>
+                        <div class="circle">
+                          <div class="back" id="bernarooBack">
+                            <br>
+                            <br>
+                            <br>
+                            <p class="text">
+                              Event Management Site commissioned by the Bernaroo Festival in New Bern, NC.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="col-12 col-md-4">
                     <div class="webImgContainer" id="yogiRachLink">
                         <h2 class="circleHeading">The Well Yogi</h2>
                         <h3 class="circleHeadingTwo">Business Page</h3>
@@ -536,27 +577,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="col-12 col-md-4">
-                    <div class="webImgContainer" id="bernarooLink">
-                        <h2 class="circleHeading">Bernaroo</h2>
-                        <h3 class="circleHeadingTwo">Public Event Site</h3>
-                      <div class="circle">
-                        <div class="front">
-                          <img width="250" height="250" src="assets/images/Bernaroo.png" alt="bernarooImg">
-                        </div>
-                        <div class="circle">
-                          <div class="back" id="bernarooBack">
-                            <br>
-                            <br>
-                            <br>
-                            <p class="text">
-                              Event Management Site commissioned by the Bernaroo Festival in New Bern, NC.  In Progress; Click to Visit.
-                            </p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                
           </div>
         </div> 
       </div>
