--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                   <h3 class="circleHeadingTwo">Local Music Solution</h3>
                 <div class="circle">
                   <div class="front">
-                    <img width="250" height="250" src="assets/images/ListenHer.png" alt="listenHearImg">
+                    <img width="250" height="250" src="assets/images/listenHer.png" alt="listenHearImg">
                   </div>
                   <div class="circle">
                     <div class="back" id="listenHereBack">
