adding in scraping app to portoflio

--- a/index.html
+++ b/index.html
@@ -612,6 +612,27 @@
                 </div>
               </div>
               </div>
+              <div class="col-12 col-md-4">
+                <div class="webImgContainer" id="localScrapeLink">
+                  <h2 class="circleHeading">The Local Scrape</h2>
+                  <h3 class="circleHeadingTwo">Full Stack Web Scraping App</h3>
+                  <div class="circle">
+                    <div class="front">
+                      <img width="250" height="250" src="assets/images/localScrape.png" alt="localScrapeImg">
+                    </div>
+                    <div class="circle">
+                      <div class="back" id="localScrapeBack">
+                        <br>
+                        <br>
+                        <p class="text">
+                          Full Stack Application.  <br> Utilizes Node, Express, MongoDB, Mongoose, Cheerio, Axios, and Handlebars. Click to visit on Heroku.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
           <div class="row">
               <div class="col">
                  <h1 class="projText" id="schoolLineTwo">Front End:</h1>
